feat: update handler
