# swagger/goshorturl.json
@@ -26,8 +26,19 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "url",
+            "in": "query",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "tags": [
           "shorturl"
+        ],
+        "consumes": [
+          "multipart/form-data"
         ]
       }
     },
@@ -68,6 +79,43 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "url",
+            "in": "query",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "shorturl"
+        ],
+        "consumes": [
+          "multipart/form-data"
+        ]
+      }
+    },
+    "/api/v1/shorturl/update": {
+      "put": {
+        "operationId": "UpdateShortUrlHandler",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/UpdateShortUrlResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UpdateShortUrlRequest"
+            }
+          }
+        ],
         "tags": [
           "shorturl"
         ]
@@ -77,7 +125,15 @@
   "definitions": {
     "AccessShortUrlRequest": {
       "type": "object",
-      "title": "AccessShortUrlRequest"
+      "properties": {
+        "url": {
+          "type": "string"
+        }
+      },
+      "title": "AccessShortUrlRequest",
+      "required": [
+        "url"
+      ]
     },
     "AccessShortUrlResponse": {
       "type": "object",
@@ -85,19 +141,107 @@
     },
     "CreatShortUrlResponse": {
       "type": "object",
-      "title": "CreatShortUrlResponse"
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "url": {
+          "type": "string"
+        }
+      },
+      "title": "CreatShortUrlResponse",
+      "required": [
+        "id",
+        "url"
+      ]
     },
     "CreateShortUrlRequest": {
       "type": "object",
-      "title": "CreateShortUrlRequest"
+      "properties": {
+        "origin": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "expire_at": {
+          "type": "string",
+          "description": " ISO 8601 格式 格式: \"2023-08-15T14:30:00+08:00\""
+        }
+      },
+      "title": "CreateShortUrlRequest",
+      "required": [
+        "origin",
+        "description",
+        "expire_at"
+      ]
     },
     "DetailShortUrlRequest": {
       "type": "object",
-      "title": "DetailShortUrlRequest"
+      "properties": {
+        "url": {
+          "type": "string"
+        }
+      },
+      "title": "DetailShortUrlRequest",
+      "required": [
+        "url"
+      ]
     },
     "DetailShortUrlResponse": {
       "type": "object",
-      "title": "DetailShortUrlResponse"
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "url": {
+          "type": "string"
+        },
+        "origin": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "expire_at": {
+          "type": "string"
+        }
+      },
+      "title": "DetailShortUrlResponse",
+      "required": [
+        "id",
+        "url",
+        "origin",
+        "description",
+        "expire_at"
+      ]
+    },
+    "UpdateShortUrlRequest": {
+      "type": "object",
+      "title": "UpdateShortUrlRequest"
+    },
+    "UpdateShortUrlResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "description": {
+          "type": "string"
+        },
+        "expire_at": {
+          "type": "string"
+        }
+      },
+      "title": "UpdateShortUrlResponse",
+      "required": [
+        "id",
+        "description",
+        "expire_at"
+      ]
     }
   },
   "securityDefinitions": {
